<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.LoginFragment">

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/guideline_margin"
        android:id="@+id/guide_start"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:orientation="vertical"
        android:id="@+id/guide_end"
        app:layout_constraintGuide_end="@dimen/guideline_margin"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/splash_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_app__con"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/login_logo_margin_top"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/free_registiration_text"
        android:textSize="@dimen/free_registiration_text_size"
        android:fontFamily="@font/sfprodisplay_heavy"
        android:textColor="@color/default_text_color"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/view_margin_large"
        android:id="@+id/free_registiration"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_a_member"
        android:textSize="@dimen/not_a_member_text_size"
        android:fontFamily="@font/sfprodisplay_light"
        android:textColor="@color/default_text_color"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintBottom_toTopOf="@id/free_registiration"
        android:layout_marginBottom="@dimen/not_a_member_margin_bottom"
        android:id="@+id/not_a_member"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toStartOf="@id/facebook_login"
        app:layout_constraintBottom_toTopOf="@id/not_a_member"
        android:src="@drawable/ic_googlelogin"
        android:layout_marginBottom="@dimen/view_margin_large"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:id="@+id/google_login"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/google_login"
        app:layout_constraintEnd_toStartOf="@id/apple_login"
        app:layout_constraintBottom_toTopOf="@id/not_a_member"
        android:src="@drawable/ic_facebooklogin"
        android:layout_marginBottom="@dimen/view_margin_large"
        android:id="@+id/facebook_login"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/facebook_login"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintBottom_toTopOf="@id/not_a_member"
        android:src="@drawable/ic_applelogin"
        android:layout_marginBottom="@dimen/view_margin_large"
        android:id="@+id/apple_login"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintBottom_toTopOf="@id/facebook_login"
        android:background="@drawable/rounded_button_pink"
        android:textColor="@color/white"
        android:text="@string/login_btn"
        android:textSize="@dimen/login_btn_text_size"
        android:textAllCaps="false"
        android:layout_marginBottom="@dimen/view_margin_medium"
        android:id="@+id/login_btn"/>

    <androidx.appcompat.widget.AppCompatCheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintBottom_toTopOf="@id/login_btn"
        android:layout_marginBottom="@dimen/view_margin_medium"
        android:padding="0dp"
        android:id="@+id/remember_me_checkbox"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@id/remember_me_checkbox"
        app:layout_constraintStart_toEndOf="@id/remember_me_checkbox"
        android:text="@string/remember_me"
        android:textSize="@dimen/rememberme_text_size"
        android:textColor="@color/default_text_color"
        android:fontFamily="@font/sfprodisplay_medium"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@id/remember_me_checkbox"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        android:text="@string/forgot_password"
        android:textSize="@dimen/forgot_password_text_size"
        android:textColor="@color/default_text_color"
        android:fontFamily="@font/sfprodisplay_heavy"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="0dp"
        android:layout_height="@dimen/view_margin_xxlarge"
        android:background="@drawable/rounded_edittext_border"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintBottom_toTopOf="@id/remember_me_checkbox"
        android:layout_marginBottom="@dimen/view_margin_large"
        android:hint="@string/password"
        android:paddingStart="@dimen/view_margin_medium"
        android:paddingEnd="@dimen/view_margin_medium"
        android:inputType="textPassword"
        android:id="@+id/password_etv"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="0dp"
        android:layout_height="@dimen/view_margin_xxlarge"
        android:background="@drawable/rounded_edittext_border"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintBottom_toTopOf="@id/password_etv"
        android:layout_marginBottom="@dimen/view_margin_small"
        android:hint="@string/email"
        android:paddingStart="@dimen/view_margin_medium"
        android:paddingEnd="@dimen/view_margin_medium"
        android:inputType="textEmailAddress"
        android:id="@+id/email_etv"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="@dimen/login_text_size"
        android:fontFamily="@font/sfprodisplay_heavy"
        android:textColor="@color/default_text_color"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintBottom_toTopOf="@id/email_etv"
        android:layout_marginBottom="@dimen/view_margin_large"
        android:layout_marginStart="@dimen/view_margin_large"
        android:id="@+id/login_tv"/>

</androidx.constraintlayout.widget.ConstraintLayout>